k8s/api-auxiliarcontable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auxiliarcontable
  namespace: marshando-backend
spec:
  selector:
    matchLabels:
      app: auxiliarcontable
  replicas: 2
  template:
    metadata:
      labels:
         app: auxiliarcontable
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: auxiliarcontable
           image: localhost:5000/api-auxiliarcontable 
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auxiliarcontable
  namespace: marshando-backend
spec:
#  type: NodePort
  selector:
    app: auxiliarcontable
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
